# gal-pal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dev_galpal.py  pyproject.toml  requirements-dev.txt  requirements.txt
.agent-knowledge/: 00-orientation.md  README.md  cross-references.md  gotchas.md
.agent-knowledge/architecture/: modules.md  release-process.md
.agent-knowledge/conventions/: streaming.md  testing.md
.agent-knowledge/decisions/: 2026-05-11-ijson-row-streaming.md
.agent-knowledge/domain/: graph-quirks.md
.githooks/: pre-commit
_galpal/: __init__.py  _term.py  _version.py  auth.py  cli.py  filters.py  graph.py  model.py  reporter.py
_galpal/commands/: __init__.py  audit.py  categories.py  dedupe.py  delete.py  folders.py  prune.py  pull.py
tests/: conftest.py  test_auth.py  test_bootstrap.py  test_e2e.py  test_reporter.py  test_resilience.py  test_unit.py
